--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cloud_firestore: ^4.15.4
   intl: ^0.18.1
   url_launcher: ^6.1.10
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
